# blog

./: .gitignore  compose.prod.yaml  compose.yaml
backend/: .env.dev  .gitignore  Dockerfile  Dockerfile.prod  db.sqlite3  entrypoint.sh  pyproject.toml
backend/blog/: admin.py  models.py  pipeline.py  serializers.py  tasks.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_post_description_post_image.py  0003_userprofile.py  0004_delete_userprofile.py  0005_userprofile.py
backend/project/: .env  settings.py  urls.py
backend/social/: urls.py  views.py
backend/social/facebook/: urls.py  views.py
backend/social/github/: urls.py  views.py
backend/social/google/: urls.py  views.py
backend/social/utils/: exception_handler.py  validators.py
frontend/: Dockerfile  Dockerfile.prod  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  globals_bk.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/format/: page.tsx
frontend/components/auth/: AuthHandler.tsx  AuthHandlerWrapper.tsx  FacebookAuthHandler.tsx  FacebookAuthHandler_backup.tsx  GithubAuthHandler.tsx  GoogleAuthHandler.tsx
frontend/components/elements/: AvatarTempl.tsx  Label.tsx  ThemeToggle.tsx
frontend/components/mains/: Breadcrumb.tsx  HeadBar.tsx  HelloWorld.tsx  PostPageClientWrapper.tsx  Posts.tsx  (+1 more)
frontend/context/: ThemeContext.tsx
frontend/hooks/: useDarkMode.ts
frontend/utils/: getBaseUrl.ts  refreshAccessToken.ts  socialUser.ts
nginx/: nginx.conf
redis/: redis.conf
(+29 files in other folders)
