[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.7.0",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "drf-social-oauth2>=3.1.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
    "gevent>=24.2.1",
    "celery>=5.5.1",
    "django-celery-beat>=2.7.0",
    "redis>=5.2.1",
]
